# Structura

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  convert.py  data_loader.py  density.py  example_load_and_plot.py  fft_kde.py  kernel.py  logger.py  nufft_kde.py  save_density_map.py  system_checker.py  utils.py  visualization.py
src/__pycache__/: density._fast_sqrt_lut-73.py310.1.nbc  density._fast_sqrt_lut-73.py310.nbi  density.fast_sqrt_lut-56.py310.1.nbc  density.fast_sqrt_lut-56.py310.2.nbc  density.fast_sqrt_lut-56.py310.nbi  density.fast_sqrt_lut-57.py310.1.nbc  density.fast_sqrt_lut-57.py310.2.nbc  density.fast_sqrt_lut-57.py310.nbi  density.particle_centered_density_triangular-158.py310.1.nbc  density.particle_centered_density_triangular-158.py310.nbi  density.particle_centered_density_triangular-175.py310.1.nbc  density.particle_centered_density_triangular-175.py310.2.nbc  density.particle_centered_density_triangular-175.py310.3.nbc  density.particle_centered_density_triangular-175.py310.4.nbc  density.particle_centered_density_triangular-175.py310.nbi  density.particle_centered_density_triangular-176.py310.1.nbc  density.particle_centered_density_triangular-176.py310.2.nbc  density.particle_centered_density_triangular-176.py310.nbi  density.particle_centered_density_uniform-58.py310.1.nbc  density.particle_centered_density_uniform-58.py310.nbi  density.particle_centered_density_uniform-72.py310.1.nbc  density.particle_centered_density_uniform-72.py310.2.nbc  (+5 more)
src/etc/: config.yml  (+2 more)
(+169 files in other folders)
