[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structura"
version = "0.1.0"
description = "A Python library for analyzing and visualizing large-scale cosmic structures."
authors = [{ name = "Mingyeong Yang", email = "mmingyeong@kasi.re.kr" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "cupy",
    "tqdm"
]

[tool.setuptools]
packages = ["structura"]
package-dir = { "" = "src" }

dependencies = [
    "cupy",
    "numpy",
    "h5py",
    "tqdm",
    "psutil",
    "pyyaml",
    "matplotlib"
]